plugins {
    id 'idea'
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group 'at.binter.gcd'
version = '2.0-' + new Date().format('yyyy.MM.dd-HH.mm.ss')

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.7.1'
}

sourceCompatibility = '16'
targetCompatibility = '16'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'at.binter.gcd'
    mainClass = 'at.binter.gcd.GCDApplication'
    /* applicationDefaultJvmArgs = [
             "--add-opens=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
             "--add-opens=javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
             "--add-opens=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
             "--add-opens=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
             "--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
             "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls",
             "--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED",
             "--add-opens=javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
             "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
             "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
             "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
     ]*/
}

plugins.withType(JavaPlugin).configureEach {
    java {
        modularity.inferModulePath = true
    }
}

javafx {
    version = '16'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
}

dependencies {
    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
    //implementation 'org.controlsfx:controlsfx:11.1.0'

    implementation 'org.slf4j:slf4j-api:2.0.0-alpha4'
    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha10'

    //implementation  'com.google.guava:guava:30.1.1-jre'
    //implementation  'org.apache.commons:commons-text:1.8'
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
    implementation 'com.sun.xml.bind:jaxb-impl:3.0.1'

    //implementation 'org.jsoup:jsoup:1.14.2'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}